# gravitron

./: README.md  gravitron.code-workspace  index.html  package.json  vite.config.ts
docs/: CNAME  index.html
docs/assets/: CanvasPool-B-uKYKTm.js  CanvasPool-DnnKikI5.js  SharedSystems-DgC8jltR.js  SharedSystems-gTdNfPo7.js  WebGLRenderer-C1BTlQQa.js  WebGLRenderer-zl2_Y8wd.js  WebGPURenderer-CVyceVEK.js  WebGPURenderer-DpdYtPCN.js  browserAll-CBEOPSFf.js  browserAll-cCybv7_8.js  colorToUniform-BXaCBwVl.js  index-CfdpPrna.js  index-Ci_t15JN.js  index-Doe-bTEr.css  index-YZNpw6d-.css  physics_engine_bg-BYIRDI4y.wasm  webworkerAll-Cy3672Fb.js  webworkerAll-D5uCjsww.js
old/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
old/docs/: index.html
old/docs/assets/: index-37e96a15.css  index-ba57804e.js  physics_engine_bg-6d445f39.wasm
old/src/: main.tsx
old/src/css/: index.css
old/src/physics/: Cargo.toml
old/src/physics/src/: build.rs
old/src/tsx/objects/: Button.tsx  Credits.tsx  Settings.tsx  Slider.tsx
old/src/tsx/pages/: Error.tsx  Home.tsx  Play.tsx
src/: global.d.ts  main.tsx
src/components/: PlanetMesh.tsx  PropertyEditor.tsx  SandBox.tsx  Scene.tsx  SettingsBar.tsx  Starfield.tsx  TrailMesh.tsx  VelocityVector.tsx
src/contexts/: SimulationContext.tsx
src/pages/: Simulation.tsx
src/physics/: Cargo.toml
src/physics/src/: lib.rs
src/tsx/objects/: SandBox.tsx
src/tsx/utils/: BatchGraphics.tsx
src/utils/: Transitions.tsx  Types.tsx  Viewport.tsx  useWindowDimension.tsx
(+2 files in other folders)
